--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/4. 导入测试场景.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/4. 导入测试场景.md
@@ -14,19 +14,19 @@
 
 a）进入全自动测试平台，单击页面上方接口测试，进入接口测试页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/186634152-30440068-fb98-49a4-9423-9176e7ab49a1.png)
 
 ##### 图4-1 进入接口测试页面
 
 b）从文件导入：单击测试场景管理，选中需要导入测试场景的测试用例，然后单击更多 > 导入场景 >从文件导入。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/186634180-df31bf5f-f714-411f-8d3b-b41a5e9bc12c.png)
 
 ##### 图4-2 从文件导入测试场景
 
 c）上传测试场景文件，然后单击确定。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-3.png)
+![image](https://user-images.githubusercontent.com/79617492/186634191-cca5b32d-6bf8-47d7-a405-20684bb4ea0b.png)
 
 ##### 图4-3 上传测试场景文件
 
@@ -34,19 +34,19 @@ c）上传测试场景文件，然后单击确定。
 
 d）系统提“是否确定导入”，确认后单击继续导入即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-4.png)
+![image](https://user-images.githubusercontent.com/79617492/186634208-dacd600b-33be-492a-8e78-d45d822a355e.png)
 
 ##### 图4-4 单击继续导入
 
 e）从模板导入：单击测试场景管理，选中需要导入测试场景的测试用例，然后单击更多 > 导入场景 >从模板导入。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-5.png)
+![image](https://user-images.githubusercontent.com/79617492/186634233-6a34cf25-22b9-424d-bdcf-281591700bd5.png)
 
 ##### 图4-5 导入测试场景的测试用例
 
 f）选择导入的场景模板，然后单击确定。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-6.png)
+![image](https://user-images.githubusercontent.com/79617492/186634255-92a7d57f-727a-4993-8e24-073cbc1524a3.png)
 
 ##### 图4-6 选择导入的场景模板
 
@@ -54,6 +54,6 @@ f）选择导入的场景模板，然后单击确定。
 
 g）系统提“是否确定导入”，确认后单击继续导入即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-7.png)
+![image](https://user-images.githubusercontent.com/79617492/186634290-87133438-ed1d-4bec-bf53-25f7e5300497.png)
 
 ##### 图4-7 单击继续导入
