--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/6. 查看修改日志.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/6. 查看修改日志.md
@@ -1,1 +1,13 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.1 测试场景管理
+
+##### 2.3.4.1.6 查看修改日志
+
+本节将为您介绍如何查看测试场景的修改日志。在修改日志列表，您不仅可以看到测试场景的所有修改日志，还可以通过单击“回滚到此版本”选项，将测试场景的当前版本回滚到指定版本；同时您也可以单击“日志比较”选项，进行测试场景的版本差异对比。
+
+##### 2.3.4.1.6.1 操作步骤
