--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/6. 查看修改日志.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/6. 查看修改日志.md
@@ -11,3 +11,15 @@
 本节将为您介绍如何查看测试场景的修改日志。在修改日志列表，您不仅可以看到测试场景的所有修改日志，还可以通过单击“回滚到此版本”选项，将测试场景的当前版本回滚到指定版本；同时您也可以单击“日志比较”选项，进行测试场景的版本差异对比。
 
 ##### 2.3.4.1.6.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方接口测试，进入接口测试页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/6-1.png)
+
+##### 图6-1 进入接口测试页面
+
+b）单击测试场景管理，选中需要查看修改日志的测试用例，然后单击更多 > 修改日志。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/6-2.png)
+
+##### 图6-2 查看修改日志的测试用例
