--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/7. 另存为模板.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/7. 另存为模板.md
@@ -1,2 +1,13 @@
+### 2. 操作指南
 
-test
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.1 测试场景管理
+
+##### 2.3.4.1.7 另存为模板
+
+用户可以选择将当前测试场景另存为场景模板，用于在导入场景时以场景模板方式导入；保存的测试场景模板供同租户下所有账户使用，将直接显示在选择场景模板列表页，无需在导入场景时再次上传文件，有便于操作管理。本节将为您介绍如何将当前测试场景另存为场景模板。
+
+##### 2.3.4.1.7.1 操作步骤
