--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/7. 另存为模板.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/7. 另存为模板.md
@@ -11,3 +11,15 @@
 用户可以选择将当前测试场景另存为场景模板，用于在导入场景时以场景模板方式导入；保存的测试场景模板供同租户下所有账户使用，将直接显示在选择场景模板列表页，无需在导入场景时再次上传文件，有便于操作管理。本节将为您介绍如何将当前测试场景另存为场景模板。
 
 ##### 2.3.4.1.7.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方接口测试 > 测试场景管理，进入测试场景管理页面。
+
+b）在左侧用例列表，选中已创建测试场景的测试用例 ，单击更多 > 另存为模板即可。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/7-1.png)
+
+##### 图7-1 单击更多 > 另存为模板
+
+c）系统提示“操作成功，请在导入场景里导入模板”。
+
+##### 说明：关于如何导入场景，您可以参见文档《SoFlu全自动测试平台教程操作指南第4.1.4节：导入测试场景》。
