--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/1. 新增接口模块.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/1. 新增接口模块.md
@@ -1,1 +1,13 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.2 接口管理
+
+##### 2.3.4.2.1 新增接口模块
+
+通过创建接口模块，用户可以分类管理测试平台中的各类接口。
+
+##### 2.3.4.2.1.1 操作步骤
