--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/4. 新增接口.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/4. 新增接口.md
@@ -1,1 +1,13 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.2 接口管理
+
+##### 2.3.4.2.4 新增接口
+
+您可以在已创建的接口模块下新增接口进行接口测试，本节为您介绍新增接口的具体操作过程。
+
+##### 2.3.4.2.4.1 操作步骤
