--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/4. 新增接口.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/4. 新增接口.md
@@ -14,13 +14,13 @@
 
 a）进入“接口测试 > 接口管理 ”页面，选中已创建的接口模块，在右侧界面单击新增测试接口。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/186814035-2fe3912e-346a-441d-bb8a-f684e957ab1d.png)
 
 ##### 图4-1 单击新增测试接口
 
 b）系统显示新增接口页面，填写对应的基础信息和请求参数，单击保存即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/186814043-d44ebf8a-65c1-4d4b-b967-add80aab0e6d.png)
 
 ##### 图4-2 填写对应的基础信息和请求参数
 
