--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/5. 修改接口.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/5. 修改接口.md
@@ -14,13 +14,13 @@
 
 a）进入项目的接口测试功能模块，切换到接口管理页面，找到需要修改的接口，单击编辑图标，打开“编辑接口”页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/5-1.png)
+![image](https://user-images.githubusercontent.com/79617492/188594490-dc1121ee-7ac1-4a95-9d0d-751e0f6d275d.png)
 
 ##### 图5-1 打开“编辑接口”页面
 
 b）在“编辑接口”页面，填写完修改后的接口信息后，单击保存即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/5-2.png)
+![image](https://user-images.githubusercontent.com/79617492/188594513-4cd280a2-8401-4083-9217-e8963cb0e162.png)
 
 ##### 图5-2 填写修改后的接口信息
 
