--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/10. 查看接口修改日志.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/10. 查看接口修改日志.md
@@ -14,24 +14,24 @@
 
 a）进入项目的接口测试功能模块，切换到接口管理页面，找到需要操作的接口，单击更多 > 修改日志，弹出修改日志列表。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/10-1.png)
+![image](https://user-images.githubusercontent.com/79617492/188596784-887dfdb4-95c0-4bbb-af4b-3a2c7e89cc0f.png)
 
 ##### 图10-1 单击更多 > 修改日志
 
 b）在“修改日志表”，单击回滚到此版本，接口将会回滚到对应的版本。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/10-2.png)
+![image](https://user-images.githubusercontent.com/79617492/188596811-0ceb6c65-42a6-4fe7-9f4f-fa4522ae450d.png)
 
 ##### 图10-2 回滚到对应的版本
 
 c）再次打开“修改日志列表”，单击日志比较，进入“接口版本比较”页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/10-3.png)
+![image](https://user-images.githubusercontent.com/79617492/188596833-4575140f-acd0-479d-9b65-54792034ce47.png)
 
 ##### 图10-3 进入“接口版本比较”页面
 
 d）选择两个不同的接口版本，单击开始比较，即可找出两个版本存在的差异，并用红框标出。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/10-4.png)
+![image](https://user-images.githubusercontent.com/79617492/188596850-14967fb8-d4c0-4b11-b139-c647bb59ed44.png)
 
 ##### 图10-4 比较两个版本存在的差异
