--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/11. 查看项目接口导入记录.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/11. 查看项目接口导入记录.md
@@ -1,1 +1,23 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.2 接口管理
+
+##### 2.3.4.2.11 查看项目接口导入记录
+
+接口导入后，将会在导入记录中生成一条导入记录，记录中包含本次导入的全部接口信息。本节介绍查看项目接口导入记录的具体操作过程。
+
+##### 2.3.4.2.11.1 前提条件
+
+已操作过导入接口，有导入记录。
+
+##### 2.3.4.2.11.2 操作步骤
+
+a）进入项目的接口测试功能模块，切换到接口管理页面，单击导入记录，进入“导入记录”页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/11-1.png)
+
+##### 图11-1 进入“导入记录”页面
