--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/11. 查看项目接口导入记录.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/11. 查看项目接口导入记录.md
@@ -18,18 +18,18 @@
 
 a）进入项目的接口测试功能模块，切换到接口管理页面，单击导入记录，进入“导入记录”页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/11-1.png)
+![image](https://user-images.githubusercontent.com/79617492/188597078-8a1959a3-b5e6-4b37-a6d5-73373c5f1514.png)
 
 ##### 图11-1 进入“导入记录”页面
 
 b）在导入记录页面，单击详情，进入“导入详情”页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/11-2.png)
+![image](https://user-images.githubusercontent.com/79617492/188597103-2ff3fdb4-a884-4a9d-ae98-c57c0d366ec2.png)
 
 ##### 图11-2 进入“导入详情”页面
 
 c）在“导入详情”页面，可选择该记录中的接口进行查看。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/11-3.png)
+![image](https://user-images.githubusercontent.com/79617492/188597130-df6c041f-a2ab-4766-bbb8-f4b8d6e2ee41.png)
 
 ##### 图11-3 选择该记录中的接口进行查看
