--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/12. 关联全自动开发平台项目.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/12. 关联全自动开发平台项目.md
@@ -1,1 +1,21 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.2 接口管理
+
+##### 2.3.4.2.12 关联全自动开发平台项目
+
+关联项目可以将（后端）全自动开发平台的项目接口同步到全自动测试平台进行管理，本节介绍全自动测试平台项目关联全（后端）自动开发平台项目的具体操作过程。
+
+##### 2.3.4.2.12.1 操作步骤
+
+a）进入项目的接口测试功能模块，切换到接口管理页面，单击关联项目，进入“关联全自动开发平台项目”页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/12-1.png)
+
+##### 图12-1 单击关联项目
+
+b）在“关联全自动开发平台项目”页面，找到需要关联的项目，单击关联，弹出二次确认弹窗。
