--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/12. 关联全自动开发平台项目.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/2. 接口管理/12. 关联全自动开发平台项目.md
@@ -14,31 +14,31 @@
 
 a）进入项目的接口测试功能模块，切换到接口管理页面，单击关联项目，进入“关联全自动开发平台项目”页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/12-1.png)
+![image](https://user-images.githubusercontent.com/79617492/188818098-0926cc98-cd6e-4344-963e-f43073b7349a.png)
 
 ##### 图12-1 单击关联项目
 
 b）在“关联全自动开发平台项目”页面，找到需要关联的项目，单击关联，弹出二次确认弹窗。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/12-2.png)
+![image](https://user-images.githubusercontent.com/79617492/188818130-2edda101-2074-43d0-a42d-afc6966bbc82.png)
 
 ##### 图12-2 弹出二次确认弹窗
 
 c）在二次确认弹窗上单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/12-3.png)
+![image](https://user-images.githubusercontent.com/79617492/188818153-a82dc065-5653-4963-967b-08c5d751926a.png)
 
 ##### 图12-3 单击确定
 
 d）项目关联之后，若（后端）全自动开发平台的接口有改动，可以再次进入“关联全自动开发平台项目”页面，单击同步，弹出提示。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/12-4.png)
+![image](https://user-images.githubusercontent.com/79617492/188818182-77c2ed19-f010-4e75-a0cf-fd95fcdc6120.png)
 
 ##### 图12-4 单击同步
 
 e）在提示页面，可以单击查看差异，查看接口修改前后的不同，也可以单击继续同步更新接口数据。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/12-5.png)
+![image](https://user-images.githubusercontent.com/79617492/188818207-0b10ab8b-ec43-4155-b466-236953563b87.png)
 
 ##### 图12-5 查看接口修改前后的不同
 
