--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/3. 数据集管理/1. SQL管理/5. 新增SQL数据集.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/3. 数据集管理/1. SQL管理/5. 新增SQL数据集.md
@@ -16,13 +16,13 @@
 
 a）进入全自动测试平台，单击页面上方测试场景 > SQL管理 > 新增SQL数据集。
 
-![输入图片说明](../../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/5-1.png)
+![image](https://user-images.githubusercontent.com/79617492/188819526-0e6c5558-1356-44b0-9bc3-f9d7b6a8ed9d.png)
 
 ##### 图5-1 新增SQL数据集
 
 b）输入数据集名称、变量名和SQL内容，单击确定即可。
 
-![输入图片说明](../../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/5-2.png)
+![image](https://user-images.githubusercontent.com/79617492/188819552-3653dcef-0e25-4913-bf89-6af9ce0fdf05.png)
 
 ##### 图5-2 输入SQL数据集信息
 
