--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/3. 数据集管理/1. SQL管理/6. 修改SQL数据集.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/3. 数据集管理/1. SQL管理/6. 修改SQL数据集.md
@@ -16,18 +16,18 @@
 
 a）进入全自动测试平台，单击页面上方测试场景 > SQL管理，进入SQL管理页面。
 
-![输入图片说明](../../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/6-1.png)
+![image](https://user-images.githubusercontent.com/79617492/188819780-ef9ffed9-af3e-42c1-a011-03b142b21d59.png)
 
 ##### 图6-1 进入SQL管理页面
 
 b）选择数据库，选中需修改的数据集，在操作列单击修改图标，系统弹出编辑SQL数据集页面。
 
-![输入图片说明](../../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/6-2.png)
+![image](https://user-images.githubusercontent.com/79617492/188819806-1ccceb43-28b1-49fb-b43b-b824fc693d49.png)
 
 ##### 图6-2 单击修改图标
 
 c）对数据集内容进行修改后，单击确定即可。
 
-![输入图片说明](../../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/6-3.png)
+![image](https://user-images.githubusercontent.com/79617492/188819830-d85c09af-cffa-4b8f-84a7-617c0f2112aa.png)
 
 ##### 图6-3 对数据集内容进行修改
