--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/3. 数据集管理/2. 变量集/1. 新增变量集.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/3. 数据集管理/2. 变量集/1. 新增变量集.md
@@ -16,19 +16,19 @@
 
 a）进入全自动测试平台，单击测试场景 > 变量集 > 新增变量集，进入新增变量集页面。
 
-![输入图片说明](../../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/2.%20%E5%8F%98%E9%87%8F%E9%9B%86/image.png)
+![image](https://user-images.githubusercontent.com/79617492/189089303-bc51f2a8-2ccf-4c35-8c56-5bbe8f4973cd.png)
 
 ##### 图1-1 进入新增变量集页面
 
 b）输入变量集名称，单击新增变量。
 
-![输入图片说明](../../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/2.%20%E5%8F%98%E9%87%8F%E9%9B%86/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/189089319-7806f0c0-a4f7-43e3-9afb-08514022268d.png)
 
 ##### 图1-2 单击新增变量
 
 c）输入变量名、变量类型、变量值、备注，单击确定即可保存。
 
-![输入图片说明](../../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/2.%20%E5%8F%98%E9%87%8F%E9%9B%86/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/189089334-2c7ed831-1809-4f0d-b262-8710c6a6af67.png)
 
 ##### 图1-3 输入变量集信息
 
