--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/3. 数据集管理/2. 变量集/2. 修改变量集.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/3. 数据集管理/2. 变量集/2. 修改变量集.md
@@ -1,1 +1,17 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.3 数据集管理
+
+##### 2.3.4.3.2 变量集
+
+##### 2.3.4.3.2.2 修改变量集
+
+本节介绍修改变量集的具体操作过程。
+
+##### 2.3.4.3.2.2.1 操作步骤
+
+a）进入全自动测试平台，单击测试场景 > 变量集，进入变量集页面。
