--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/3. 数据集管理/2. 变量集/2. 修改变量集.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/3. 数据集管理/2. 变量集/2. 修改变量集.md
@@ -16,18 +16,18 @@
 
 a）进入全自动测试平台，单击测试场景 > 变量集，进入变量集页面。
 
-![输入图片说明](../../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/2.%20%E5%8F%98%E9%87%8F%E9%9B%86/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/189089499-3fb4dd6a-87f4-4834-b5a4-13a9109b1b0a.png)
 
 ##### 图2-1 进入变量集页面
 
 b）选择需要修改的变量集，单击操作处的修改图标进入编辑页面。
 
-![输入图片说明](../../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/2.%20%E5%8F%98%E9%87%8F%E9%9B%86/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/189089519-a17bd3d7-6daa-462a-b923-55e2f8f0ca4c.png)
 
 ##### 图2-2 进入编辑页面
 
 c）根据需求修改数据，单击确定即可完成修改。
 
-![输入图片说明](../../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/2.%20%E5%8F%98%E9%87%8F%E9%9B%86/2--3.png)
+![image](https://user-images.githubusercontent.com/79617492/189089539-fa0f6b8e-4be2-4d23-82ec-f3aa23a95da2.png)
 
 ##### 图2-3 单击确定完成修改
