--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/1. 测试场景管理/1. 新增测试场景.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/1. 测试场景管理/1. 新增测试场景.md
@@ -14,19 +14,19 @@
 
 a）进入全自动测试平台，单击页面上方测试场景，进入测试场景页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/image.png)
+![image](https://user-images.githubusercontent.com/79617492/189297430-8892345c-f42f-4799-9c07-e0da2bcb1a80.png)
 
 ##### 图1-1 进入测试场景页面
 
 b）单击测试场景管理，选中需要新增测试场景的测试用例，然后单击新增场景。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/189297464-b01ece52-d96b-4b2c-bb19-74b51d9a6c69.png)
 
 ##### 图1-2 单击新增场景
 
 c）单击根场景组，然后单击＋号按钮 > 接口。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/189297476-758ebcb3-ce95-4ca2-904a-463895b44d1c.png)
 
 ##### 图1-3 单击＋号按钮 > 接口
 
@@ -34,12 +34,12 @@ c）单击根场景组，然后单击＋号按钮 > 接口。
 
 d）选择接口，然后单击确定。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/189297486-011e036b-31a0-4119-bb4a-9c0158e664f1.png)
 
 ##### 图1-4 单击确定
 
 e）选择环境，然后单击保存。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/1-5.png)
+![image](https://user-images.githubusercontent.com/79617492/189297497-b1d2f35a-67c1-4585-908e-8569b5706695.png)
 
 ##### 图1-5 单击保存
