--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/1. 测试场景管理/2. 执行测试场景.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/1. 测试场景管理/2. 执行测试场景.md
@@ -14,19 +14,19 @@
 
 a）进入全自动测试平台，单击页面上方测试场景，进入测试场景页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/189297716-26129776-ff0f-4de2-8c01-1a6777db584c.png)
 
 ##### 图2-1 进入测试场景页面
 
 b）单击测试场景管理，选择需要执行测试场景的测试用例，然后单击执行测试场景。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/189297735-d6714e5f-87f6-473b-bef8-437013fd1e66.png)
 
 ##### 图2-2 执行测试场景
 
 c）系统弹出执行报告页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/189297751-33b9cd27-dcf6-4637-989f-ad458d0ebfa7.png)
 
 ##### 图2-3 系统弹出执行报告页面
 
