--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/1. 测试场景管理/3. 重置测试场景.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/1. 测试场景管理/3. 重置测试场景.md
@@ -14,19 +14,19 @@
 
 a）进入全自动测试平台，单击页面上方测试场景，进入测试场景页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/189297962-a610ee47-c7c1-4af8-95c0-d4eb6aca4990.png)
 
 ##### 图3-1 进入测试场景页面
 
 b）单击测试场景管理，选中需要重置测试场景的测试用例，然后单击更多 > 重置测试场景。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/189297985-be7f7c95-9687-48d8-9724-f1b7587f51e8.png)
 
 ##### 图3-2 单击更多 > 重置测试场景
 
 c）系统提示“是否重置测试场景”，确认后单击确定即可。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/3-3.png)
+![image](https://user-images.githubusercontent.com/79617492/189298001-c7c4a201-7f51-492c-89c5-99910a5cc660.png)
 
 ##### 图3-3 单击确定
 
