--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/1. 测试场景管理/4. 导入测试场景.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/1. 测试场景管理/4. 导入测试场景.md
@@ -14,19 +14,19 @@
 
 a）进入全自动测试平台，单击页面上方接口测试，进入接口测试页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/189298910-208a6fe2-eb49-4085-8c9b-b4eed36f4301.png)
 
 ##### 图4-1 进入接口测试页面
 
 b）从文件导入：单击测试场景管理，选中需要导入测试场景的测试用例，然后单击更多 > 导入场景 >从文件导入。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/189298940-51d902ac-ca34-4755-8a7e-d0941716aa00.png)
 
 ##### 图4-2 从文件导入测试场景
 
 c）上传测试场景文件，然后单击确定。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-3.png)
+![image](https://user-images.githubusercontent.com/79617492/189298958-a39ddecd-892b-4ad7-b5f0-de36b1415d29.png)
 
 ##### 图4-3 上传测试场景文件
 
@@ -34,19 +34,19 @@ c）上传测试场景文件，然后单击确定。
 
 d）系统提“是否确定导入”，确认后单击继续导入即可。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-4.png)
+![image](https://user-images.githubusercontent.com/79617492/189298995-37004758-fd9f-4633-aebc-61ae8a405e1c.png)
 
 ##### 图4-4 单击继续导入
 
 e）从模板导入：单击测试场景管理，选中需要导入测试场景的测试用例，然后单击更多 > 导入场景 >从模板导入。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-5.png)
+![image](https://user-images.githubusercontent.com/79617492/189299015-d9d408d0-ea40-4f8c-809e-17d1cdc8cdc5.png)
 
 ##### 图4-5 导入测试场景的测试用例
 
 f）选择导入的场景模板，然后单击确定。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-6.png)
+![image](https://user-images.githubusercontent.com/79617492/189299032-0476241f-0fdd-4dea-babf-9676fedaffed.png)
 
 ##### 图4-6 选择导入的场景模板
 
@@ -54,6 +54,6 @@ f）选择导入的场景模板，然后单击确定。
 
 g）系统提“是否确定导入”，确认后单击继续导入即可。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/4-7.png)
+![image](https://user-images.githubusercontent.com/79617492/189299061-4da47bc4-fdd3-4a25-9bd2-167db03f4e1a.png)
 
 ##### 图4-7 单击继续导入
