--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/1. 测试场景管理/6. 查看修改日志.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/1. 测试场景管理/6. 查看修改日志.md
@@ -14,36 +14,36 @@
 
 a）进入全自动测试平台，单击页面上方接口测试，进入接口测试页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/6-1.png)
+![image](https://user-images.githubusercontent.com/79617492/189299395-d9d865c4-eedf-4ab6-9964-99b0b77cf6c6.png)
 
 ##### 图6-1 进入接口测试页面
 
 b）单击测试场景管理，选中需要查看修改日志的测试用例，然后单击更多 > 修改日志。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/6-2.png)
+![image](https://user-images.githubusercontent.com/79617492/189299439-ae837aad-a0a9-4b7f-97f0-32f574eb2dcd.png)
 
 ##### 图6-2 查看修改日志的测试用例
 
 c）在底部拉起的修改日志列表页面，单击日志比较。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/6-3.png)
+![image](https://user-images.githubusercontent.com/79617492/189299465-a6205585-4d9c-439a-9b9a-54dd5d2c396e.png)
 
 ##### 图6-3 日志比较
 
 d）在日志比较页面，选择要比较的日志版本，单击开始比较，可以查看到两个日志版本的差异。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/6-4.png)
+![image](https://user-images.githubusercontent.com/79617492/189299506-d5628b53-69bc-4fcb-af3a-bc171d37f5ae.png)
 
 ##### 图6-4 查看两个日志版本的差异
 
 e）在底部拉起的修改日志列表页面，也可以进行回滚日志版本，选择要回滚的日志版本，然后单击回滚到此版本。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/6-5.png)
+![image](https://user-images.githubusercontent.com/79617492/189299531-0ff12c53-55dc-4122-b6b6-06f7d668072f.png)
 
 ##### 图6-5 回滚日志版本
 
 f）系统提示“是否回滚至此版本”，确认后单击确定即可。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/6-6.png)
+![image](https://user-images.githubusercontent.com/79617492/189299559-f0b5c454-dfe7-42e7-8f14-d7328383b389.png)
 
 ##### 图6-6 单击确定
