--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/2. 接口管理/1. 新增接口模块.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/2. 接口管理/1. 新增接口模块.md
@@ -14,13 +14,13 @@
 
 a）进入“测试场景 > 接口管理”页面，单击接口模块后的 + 按钮。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/image.png)
+![image](https://user-images.githubusercontent.com/79617492/189302364-b4607b31-5cd6-4da0-8514-5ca4bbcf3b71.png)
 
 ##### 图1-1 单击 + 按钮
 
 b）系统弹出新增模块页面，填入正确的模块名，单击确认即可。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/189302378-9fae3235-7992-4f43-9b2e-07efb4977336.png)
 
 ##### 图1-2 填入正确的模块名
 
