--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/2. 接口管理/10. 查看接口修改日志.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/2. 接口管理/10. 查看接口修改日志.md
@@ -14,24 +14,24 @@
 
 a）进入项目的接口测试功能模块，切换到接口管理页面，找到需要操作的接口，单击更多 > 修改日志，弹出修改日志列表。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/10-1.png)
+![image](https://user-images.githubusercontent.com/79617492/189302484-6a8755d9-0a4c-4aa0-b06e-57e351f768a3.png)
 
 ##### 图10-1 单击更多 > 修改日志
 
 b）在“修改日志表”，单击回滚到此版本，接口将会回滚到对应的版本。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/10-2.png)
+![image](https://user-images.githubusercontent.com/79617492/189302497-541382d9-1a4b-4bae-99e4-9adf22f4dc02.png)
 
 ##### 图10-2 回滚到对应的版本
 
 c）再次打开“修改日志列表”，单击日志比较，进入“接口版本比较”页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/10-3.png)
+![image](https://user-images.githubusercontent.com/79617492/189302522-79555742-d330-42fc-b3da-19c6120b587c.png)
 
 ##### 图10-3 进入“接口版本比较”页面
 
 d）选择两个不同的接口版本，单击开始比较，即可找出两个版本存在的差异，并用红框标出。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/10-4.png)
+![image](https://user-images.githubusercontent.com/79617492/189302541-982326eb-43cd-453c-8cb6-db539b4f9fe7.png)
 
 ##### 图10-4 比较两个版本存在的差异
