--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/2. 接口管理/6. 删除接口.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/2. 接口管理/6. 删除接口.md
@@ -16,12 +16,12 @@
 
 a）进入项目的接口测试功能模块，切换到接口管理页面，找到需要删除的接口，单击删除图标，弹出二次确认弹窗。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6-1.png)
+![image](https://user-images.githubusercontent.com/79617492/189306884-29cd3f6e-89d2-4051-861b-0e961c3a4813.png)
 
 ##### 图6-1 单击删除图标
 
 b）在二次确认弹窗单击确定即可。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6-2.png)
+![image](https://user-images.githubusercontent.com/79617492/189306899-1a39fa3a-2649-43de-b56a-b48ecc51d4f8.png)
 
 ##### 图6-2 在二次确认弹窗单击确定
