--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/2. 接口管理/8. 导出接口.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/2. 接口管理/8. 导出接口.md
@@ -14,12 +14,12 @@
 
 a）进入项目的接口测试功能模块，切换到接口管理页面，单击导出接口，进入“导出接口”页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/8-1.png)
+![image](https://user-images.githubusercontent.com/79617492/189309137-a5a464e1-6f19-4b7f-a481-96475f7bc00b.png)
 
 ##### 图8-1 单击删除图标
 
 b）在“导出接口”页面，勾选需要导出的接口，单击确定即可。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/2.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/8-2.png)
+![image](https://user-images.githubusercontent.com/79617492/189309154-e4be624a-339e-45fa-a4fe-dbfc1941508d.png)
 
 ##### 图8-2 勾选需要导出的接口
