--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/2. 新增数据库连接.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/2. 新增数据库连接.md
@@ -1,1 +1,23 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.3 数据集管理
+
+##### 2.3.4.3.1 SQL管理
+
+##### 2.3.4.3.1.2 新增数据库连接
+
+本节介绍新增数据源的具体操作过程。
+
+##### 2.3.4.3.1.2.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方测试场景 > SQL管理，单击数据库连接列表旁的"+"按钮，系统弹出新增数据库连接页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/2-1.png)
+
+##### 图2-1 单击数据库连接列表旁的"+"按钮
+
+b）填写数据库连接名称、数据库类型、数据库名称、IP地址、端口号、用户名和密码。
