--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/3. 修改数据库连接.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/3. 修改数据库连接.md
@@ -1,1 +1,17 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.3 数据集管理
+
+##### 2.3.4.3.1 SQL管理
+
+##### 2.3.4.3.1.3 修改数据库连接
+
+本节介绍修改数据库连接的具体操作过程。
+
+##### 2.3.4.3.1.3.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方测试场景 > SQL管理，选中需修改的数据库，单击修改图标，系统弹出编辑数据库连接页面。
