--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/3. 修改数据库连接.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/3. 修改数据库连接.md
@@ -16,12 +16,12 @@
 
 a）进入全自动测试平台，单击页面上方测试场景 > SQL管理，选中需修改的数据库，单击修改图标，系统弹出编辑数据库连接页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/189871977-0fdae614-4edc-4b09-b15d-b10ff5bfbd02.png)
 
 ##### 图3-1 单击修改图标
 
 b）根据需求对相关信息进行修改后，单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/189871999-d0f4abf5-c9c1-4c83-a1bf-6229f3f84db8.png)
 
 ##### 图3-2 修改相关信息
