--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/4. 删除数据库连接.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/4. 删除数据库连接.md
@@ -1,1 +1,17 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.3 数据集管理
+
+##### 2.3.4.3.1 SQL管理
+
+##### 2.3.4.3.1.4 删除数据库连接
+
+本节介绍删除数据库连接的具体操作过程。
+
+##### 2.3.4.3.1.4.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方测试场景 > SQL管理，选中需删除的数据库连接，单击删除即可。
