--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/6. 修改SQL数据集.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/6. 修改SQL数据集.md
@@ -1,1 +1,21 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.3 数据集管理
+
+##### 2.3.4.3.1 SQL管理
+
+##### 2.3.4.3.1.6 修改SQL数据集
+
+本节介绍修改SQL数据集的具体操作过程。
+
+##### 2.3.4.3.1.6.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方测试场景 > SQL管理，进入SQL管理页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/6-1.png)
+
+##### 图6-1 进入SQL管理页面
