--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/6. 修改SQL数据集.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/6. 修改SQL数据集.md
@@ -16,18 +16,18 @@
 
 a）进入全自动测试平台，单击页面上方测试场景 > SQL管理，进入SQL管理页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/6-1.png)
+![image](https://user-images.githubusercontent.com/79617492/190042088-af653bcd-43ac-4525-9ead-1d4e7c5c08ce.png)
 
 ##### 图6-1 进入SQL管理页面
 
 b）选择数据库，选中需修改的数据集，在操作列单击修改图标，系统弹出编辑SQL数据集页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/6-2.png)
+![image](https://user-images.githubusercontent.com/79617492/190042100-36d517a8-11bc-49a4-ba79-26fb022e488a.png)
 
 ##### 图6-2 单击修改图标
 
 c）对数据集内容进行修改后，单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/6-3.png)
+![image](https://user-images.githubusercontent.com/79617492/190042114-b0c12a7b-61d5-49c9-baf5-7f27d99e53ef.png)
 
 ##### 图6-3 对数据集内容进行修改
