--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/3. Excel管理/1. 新增Excel文件.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/3. Excel管理/1. 新增Excel文件.md
@@ -1,1 +1,17 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.3 数据集管理
+
+##### 2.3.4.3.3 Excel管理
+
+##### 2.3.4.3.3.1 新增Excel文件
+
+可以通过上传excel表格来添加测试所需的数据，使用时只需要通过变量名就能获取到对应的数据，本节介绍新增Excel文件的具体操作过程。
+
+##### 2.3.4.3.3.1.1 操作步骤
+
+a）进入项目的接口测试功能模块，切换到Excel管理页面，单击新增Excel文件，进入“新增Excel文件”页面。
