--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/3. Excel管理/4. 删除Excel文件.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/3. Excel管理/4. 删除Excel文件.md
@@ -1,1 +1,17 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.3 数据集管理
+
+##### 2.3.4.3.3 Excel管理
+
+##### 2.3.4.3.3.4 删除Excel文件
+
+本节介绍删除Excel文件的具体操作过程。
+
+##### 2.3.4.3.3.4.1 操作步骤
+
+a）进入项目的接口测试功能模块，切换到Excel管理页面，找到需要删除的Excel文件，单击删除图标，弹出二次确认弹窗。
