--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/3. Excel管理/6. 修改Excel模块.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/3. Excel管理/6. 修改Excel模块.md
@@ -16,12 +16,12 @@
 
 a）进入项目的接口测试功能模块，切换到Excel管理页面，选中需要修改的Excel模块，单击三个点按钮 > 修改模块名，进入“编辑模块”页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/3.%20Excel%E7%AE%A1%E7%90%86/6-1.png)
+![image](https://user-images.githubusercontent.com/79617492/190614008-d573386f-e6b7-4324-9ae6-ee428e05bc43.png)
 
 ##### 图6-1 单击三个点按钮 > 修改模块名
 
 b）在“编辑模块”页面，输入修改后的模块名称，单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/3.%20Excel%E7%AE%A1%E7%90%86/6-2.png)
+![image](https://user-images.githubusercontent.com/79617492/190614026-4c38572e-3e13-4524-ba66-b680185de0af.png)
 
 ##### 图6-2 输入修改后的模块名称
