--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/3. Excel管理/7. 删除Excel模块.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/3. Excel管理/7. 删除Excel模块.md
@@ -1,1 +1,15 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.3 数据集管理
+
+##### 2.3.4.3.3 Excel管理
+
+##### 2.3.4.3.3.7 删除Excel模块
+
+本节介绍删除Excel模块的具体操作过程。
+
+##### 2.3.4.3.3.7.1 操作步骤
