--- a/SoFlu全自动测试平台教程/2. 操作指南/5. UI测试/1. 配置UI环境.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/5. UI测试/1. 配置UI环境.md
@@ -1,1 +1,17 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.5 UI测试
+
+##### 2.3.5.1 配置UI环境
+
+全自动测试平台支持本地端、平台端配置UI环境，若您选择本地端配置UI环境，则需要使用本地客户端登录全自动测试平台，在填写服务地址时需使用本地IP地址；若您选择平台端配置UI环境，直接通过飞算云智官网进入全自动测试平台即可，但在填写服务地址时需使用公网IP（即外网IP地址），以下为您介绍具体操作过程。
+
+##### 说明：
+
+##### a）关于如何使用本地客户端登录全自动测试平台请参考文档《SoFlu全自动测试平台教程快速入门第1.11节：如何部署本地客户端》部分。
+
+##### b）公网IP：全球唯一IP地址，所有可以上网的地方均可访问的IP地址，公网IP地址申请成本较大，故一般推荐使用本地端配置UI环境。
+
+##### 2.3.5.1.1 步骤引导
