--- a/SoFlu全自动测试平台教程/2. 操作指南/5. UI测试/1. 配置UI环境.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/5. UI测试/1. 配置UI环境.md
@@ -15,3 +15,25 @@
 ##### b）公网IP：全球唯一IP地址，所有可以上网的地方均可访问的IP地址，公网IP地址申请成本较大，故一般推荐使用本地端配置UI环境。
 
 ##### 2.3.5.1.1 步骤引导
+
+a）本地端配置UI环境
+
+b）平台端配置UI环境
+
+##### 2.3.5.1.1.1 本地端配置UI环境
+
+##### 前提条件：若您选择使用本地端配置UI环境，请确保您已使用本地客户端登录全自动测试平台，如下图所示，登录成功后则可以继续以下步骤。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20UI%E6%B5%8B%E8%AF%95/image.png)
+
+##### 图1-1 使用本地客户端登录全自动测试平台
+
+##### 步骤 1：下载启动节点引擎包
+
+a）进入全自动测试平台首页，单击右上角工具下载选项，下载节点引擎包。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20UI%E6%B5%8B%E8%AF%95/1-2.png)
+
+##### 图1-2 使用本地客户端登录全自动测试平台
+
+b）解压节点引擎包，双击` startup.bat `启动节点引擎服务。
