--- a/SoFlu全自动测试平台教程/2. 操作指南/5. UI测试/2. 使用UI测试.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/5. UI测试/2. 使用UI测试.md
@@ -1,1 +1,19 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.5 UI测试
+
+##### 2.3.5.2 使用UI测试
+
+UI自动化测试功能，即通过模拟用户手动操作UI界面，以脚本的形式实现自动操作和验证的一种自动化测试手段，支持对功能进行冒烟和回归测试，提升测试效率，保证测试质量。本节为您介绍如何在全自动测试平台使用UI自动化测试功能。
+
+##### 2.3.5.2.1 前提条件
+
+a）您已配置好UI环境，具体操作请参见《全自动测试平台教程操作指南第2.5.1节：配置UI环境》。
+
+b）您已创建测试类型为UI测试的测试用例，如下图所示，关于如何创建测试用例，您可以参考《SoFlu全自动测试平台教程操作指南第2.3.1.1节：新增测试用例》部分。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20UI%E6%B5%8B%E8%AF%95/2-1.png)
+
+##### 2.3.5.2.2 步骤指引
