--- a/SoFlu全自动测试平台教程/2. 操作指南/5. UI测试/2. 使用UI测试.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/5. UI测试/2. 使用UI测试.md
@@ -95,3 +95,21 @@ a）单击新增步骤。
 b）系统显示添加步骤窗口，根据您进行UI测试的实际需要添加步骤，添加完成后关闭窗口即可。
 
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20UI%E6%B5%8B%E8%AF%95/2-8.png)
+
+##### 图2-8 添加步骤
+
+##### 说明：图2-9示例为自动登录飞算云智官网用例，添加步骤为“打开链接 > 输入账号 > 输入密码 > 单击登录 > 等待指定时间 > 关闭浏览器”。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20UI%E6%B5%8B%E8%AF%95/2-9.png)
+
+##### 图2-9 自动登录飞算云智官网用例
+
+##### 2.3.5.2.2.4 填写元素定位及相关参数
+
+a）打开网页，鼠标移动到需要定位的元素上，右键单击选择“检查”，浏览器会弹出控制台并自动定位到该元素的位置。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20UI%E6%B5%8B%E8%AF%95/2-10.png)
+
+##### 图2-10 右键单击选择“检查”
+
+b）鼠标放在Elements控制台下，右击该元素，选择Copy > Copy XPath。
