--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/1. 创建接口性能测试.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/1. 创建接口性能测试.md
@@ -13,3 +13,21 @@
 a）存在可用的环境配置，具体操作可参考《SoFlu全自动测试平台教程操作指南第2.1.9节：新增环境配置》；
 
 b）存在可用的资源池，具体操作可参考《SoFlu全自动测试平台教程操作指南第2.2.2.1.2节：新增资源池》；
+
+c）存在已绑定测试场景的接口测试用例，具体操作可参考《SoFlu全自动测试平台教程操作指南第2.3.1.1节：新增测试用例》和《SoFlu全自动测试平台教程操作指南第2.4.1.1节：新建测试场景》；
+
+d）已配置好可用的AccessKey参数，具体操作请参见文档《SoFlu全自动测试平台教程操作指南第2.1.6节：配置AccessKey》。
+
+##### 2.3.6.1.2 操作步骤
+
+a）进入全自动测试平台，单击“性能测试 > 性能测试管理 > 新增性能测试”开始创建接口性能测试。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/image.png)
+
+##### 图1-1 开始创建接口性能测试
+
+b）系统弹出新增接口测试页面，您需要填写接口测试的基本信息，并设置超时时间。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/1-2.png)
+
+##### 图1-2 填写接口测试的基本信息
