--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/4. 停止性能测试.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/4. 停止性能测试.md
@@ -1,1 +1,13 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.6 性能测试
+
+##### 2.3.6.4 停止性能测试
+
+本节介绍停止性能测试的具体操作过程。
+
+##### 2.3.6.4.1 操作步骤
+
+a）进入接口性能测试列表或者UI性能测试列表，选择需停止的性能测试，单击“更多 > 停止测试”。
