--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/5. 查看性能测试报告.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/5. 查看性能测试报告.md
@@ -1,1 +1,15 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.6 性能测试
+
+##### 2.3.6.5 查看性能测试报告
+
+执行接口性能测试或UI性能测试之后，您可以在接口性能测试报告中查看运行接口测试用例的负载能力、响应时间等概览情况以及请求统计、错误记录等详细信息；在UI性能测试报告中查看运行UI用例的任务汇总、步骤汇总、错误日志等详细信息。通过性能测试报告，您可以清晰得知性能测试的执行情况，本节为您介绍查看性能测试报告的具体操作过程。
+
+##### 说明：以下以查看UI性能测试报告为例，查看接口性能测试报告的操作过程同理。
+
+##### 2.3.6.5.1 操作步骤
+
+a）进入接口性能测试列表或者UI性能测试列表，选择需查看报告的性能测试，单击“更多 > 测试报告”。
