--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/5. 查看性能测试报告.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/5. 查看性能测试报告.md
@@ -13,3 +13,11 @@
 ##### 2.3.6.5.1 操作步骤
 
 a）进入接口性能测试列表或者UI性能测试列表，选择需查看报告的性能测试，单击“更多 > 测试报告”。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/5-1.png)
+
+##### 图5-1 单击“更多 > 测试报告”
+
+b）系统显示测试报告列表页面，选择需查看报告的性能测试，单击详情。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/5-2.png)
